# lars

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  actuator.json  debug.sh  flash.sh
.github/workflows/: cmake.yml  docs.yml  kicad.yml  scad.yml
3dprint/: actuator.scad  beam.scad  beam.stl  enclosure.scad  generate_stls.sh  tamb_mount.json  tamb_mount.scad  tamb_mount_inner.stl  tamb_mount_outer.stl
docs/: book.toml  generate_docs.sh
docs/src/: 3dprint.md  3dprint_prototype.md  3dprint_solenoids.md  3dprint_tambourine.md  SUMMARY.md  drummachine.md  introduction.md  loopstation.md  midi.md  pcb1.md  pcb1_pcb.md  pcb1_sch.md  pcb2.md  pcb2_pcb.md  pcb2_sch.md  usage.md
docs/src/js/: 3d.js
include/: adc.h  buttons.h  config.h  encoder.h  lcd.h  led.h  log.h  logo.h  main.h  mem.h  pulse.h  sequence.h  settings.h  tusb_config.h  ui.h  usb.h  usb_midi.h
pcb/: #auto_saved_files#  chinese_modules.kicad_sym  drumkit.kicad_pcb  drumkit.kicad_prl  drumkit.kicad_pro  drumkit.kicad_sch  fp-info-cache  fp-lib-table  generate_fab.sh  generate_plot.sh  sym-lib-table
pcb/chinese_modules.pretty/: charger.kicad_mod  dc-dc module.kicad_mod  xy-mos.kicad_mod
pcb2/: fp-info-cache  fp-lib-table  generate_fab.sh  generate_plot.sh  lars2.kicad_pcb  lars2.kicad_prl  lars2.kicad_pro  lars2.kicad_sch  sym-lib-table
pcb3/: fp-info-cache  fp-lib-table  lars3.kicad_pcb  lars3.kicad_prl  lars3.kicad_pro  lars3.kicad_sch  sym-lib-table
src/: adc.c  buttons.c  console.c  encoder.c  lcd.c  led.c  log.c  logo.c  main.c  mem.c  memmap_custom.ld  pulse.c  ring.c  sequence.c  settings.c  ui.c  usb.c  usb_cdc.c  usb_descriptors.c  usb_midi.c
